lustre/ldlm/ldlm_lock.c
@@ -108,31 +108,31 @@ void ldlm_convert_policy_to_local(struct obd_export *exp, enum ldlm_type type,
 	convert(wpolicy, lpolicy);
 }
 
-char *ldlm_it2str(int it)
+const char *ldlm_it2str(enum ldlm_intent_flags it)
 {
-        switch (it) {
-        case IT_OPEN:
-                return "open";
-        case IT_CREAT:
-                return "creat";
-        case (IT_OPEN | IT_CREAT):
-                return "open|creat";
-        case IT_READDIR:
-                return "readdir";
-        case IT_GETATTR:
-                return "getattr";
-        case IT_LOOKUP:
-                return "lookup";
-        case IT_UNLINK:
-                return "unlink";
-        case IT_GETXATTR:
-                return "getxattr";
-        case IT_LAYOUT:
-                return "layout";
-        default:
-                CERROR("Unknown intent %d\n", it);
-                return "UNKNOWN";
-        }
+	switch (it) {
+	case IT_OPEN:
+		return "open";
+	case IT_CREAT:
+		return "creat";
+	case (IT_OPEN | IT_CREAT):
+		return "open|creat";
+	case IT_READDIR:
+		return "readdir";
+	case IT_GETATTR:
+		return "getattr";
+	case IT_LOOKUP:
+		return "lookup";
+	case IT_UNLINK:
+		return "unlink";
+	case IT_GETXATTR:
+		return "getxattr";
+	case IT_LAYOUT:
+		return "layout";
+	default:
+		CERROR("Unknown intent 0x%08x\n", it);
+		return "UNKNOWN";
+	}
 }
 EXPORT_SYMBOL(ldlm_it2str);
 
